# meteofox-sen15901-emulator

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
.github/matrices/: cmake-flags.json
application/inc/: error_base.h  mode.h  sen15901_emulator_flags.h
application/src/: main.c
drivers/components/inc/: sen15901.h
drivers/components/src/: sen15901.c
drivers/device/inc/: stm32l0xx_device_flags.h
drivers/peripherals/inc/: gpio_mapping.h  mcu_mapping.h  nvic_priority.h  stm32l0xx_drivers_flags.h
drivers/peripherals/src/: gpio_mapping.c  mcu_mapping.c
drivers/registers/inc/: stm32l0xx_registers_flags.h
drivers/utils/inc/: embedded_utils_flags.h
drivers/utils/src/: terminal_hw.c
linker/: sen15901_emulator_hw1-0.ld
middleware/simulation/inc/: simulation.h
middleware/simulation/src/: simulation.c
script/: git_version.sh  sen15901_emulator_hw1-0.jlink  sen15901_emulator_hw1-0_debug.launch  sen15901_emulator_hw1-0_run.launch
startup/: sen15901_emulator_startup.c
